Bugfix: Add minimal gap between flat buttons in navbar (#12).

--- a/assets/src/scss/site/components/_navbar.scss
+++ b/assets/src/scss/site/components/_navbar.scss
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     flex-wrap: nowrap;
-    gap: 0 !important;      // neccessary because of the inline interference of WP
+    gap: 2px !important;      // neccessary because of the inline interference of WP
 
     // left element
     &:nth-of-type(1) {
